--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>Convite</title>
 
 <style>
+
 body{
     margin:0;
     height:100vh;
@@ -13,7 +14,6 @@ body{
     background-image:url("fundo.png");
     background-size:cover;
     background-position:center;
-    background-repeat:no-repeat;
     display:flex;
     flex-direction:column;
 }
@@ -24,16 +24,22 @@ body{
     cursor:pointer;
 }
 
-/* Imagens */
-img{
+/* Frames */
+.frame{
     position:absolute;
     width:100%;
     height:100%;
-    object-fit:contain;
     top:0;
     left:0;
     opacity:0;
     transition:opacity 0.8s ease;
+}
+
+.frame img{
+    width:100%;
+    height:100%;
+    object-fit:contain;
+    transform-origin:center center;
 }
 
 .active{
@@ -52,6 +58,7 @@ img{
     font-weight:bold;
     color:#d81b60;
 }
+
 </style>
 </head>
 
@@ -59,15 +66,22 @@ img{
 
 <div id="viewer" onclick="handleClick()">
 
-    <img src="img1.png" id="img0" class="active">
-    <img src="img2.png" id="img1">
-    <img src="img3.png" id="img2">
+    <div class="frame active" id="img0">
+        <img src="img1.png">
+    </div>
+
+    <div class="frame" id="img1">
+        <img src="img2.png">
+    </div>
+
+    <div class="frame" id="img2">
+        <img src="img3.png" id="finalImg">
+    </div>
 
 </div>
 
 <div id="hintBar">Toque para abrir o convite ✨</div>
 
-<!-- AUDIO -->
 <audio id="bgMusic" src="musica.mp3" preload="auto"></audio>
 
 <script>
@@ -78,45 +92,68 @@ const total = 3;
 const delay = 2000;
 
 const music = document.getElementById("bgMusic");
+const finalImg = document.getElementById("finalImg");
+
 const startTime = 10;
 const endTime = 41;
 
 function handleClick(){
 
-    // Se estiver no final → reinicia
     if(started && current === total-1){
         resetSequence();
         return;
     }
 
-    // Primeiro toque
     if(!started){
         started = true;
         document.getElementById("hintBar").style.visibility="hidden";
-
         startMusic();
         runSequence();
     }
 }
 
 function runSequence(){
-    if(current >= total-1) return;
+
+    if(current >= total-1){
+        startZoom();   // 🔥 FORÇA O ZOOM
+        return;
+    }
 
     setTimeout(()=>{
-        document.getElementById("img"+(current+1)).classList.add("active");
+
+        document.getElementById("img"+current).classList.remove("active");
         current++;
+        document.getElementById("img"+current).classList.add("active");
+
         runSequence();
+
     }, delay);
+}
+
+/* ⭐ ZOOM PROGRESSIVO REAL */
+function startZoom(){
+
+    let scale = 1;
+
+    const zoom = setInterval(()=>{
+        scale += 0.01;
+        finalImg.style.transform = `scale(${scale})`;
+
+        if(scale >= 1.5){
+            clearInterval(zoom);
+        }
+
+    }, 30);
 }
 
 function resetSequence(){
 
-    for(let i=0;i<total;i++){
-        document.getElementById("img"+i).classList.remove("active");
-    }
+    document.getElementById("img"+current).classList.remove("active");
 
     current = 0;
     started = false;
+
+    finalImg.style.transform="scale(1)";
 
     document.getElementById("img0").classList.add("active");
     document.getElementById("hintBar").style.visibility="visible";
@@ -128,7 +165,6 @@ function resetSequence(){
 function startMusic(){
 
     music.currentTime = startTime;
-
     music.play().catch(()=>{});
 
     music.ontimeupdate = () => {
